Modified the code and added demo Gif in media folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
         <title>RandomBallMove</title>
     </head>
     <body>
+        <div id = 'input'>
+            <form>
+                <label for="ballcount">Number of Balls :</label>
+                <input type="text" id="ballcount" name="ballcount"><br><br>
+                <button type="button" id='button' onclick="start();"> Submit </button><br><br>
+            </form>
+        </div>
         <div id ='area'></div>
-        <script src=./ranball.js></script>
+        <script src=./ranrun.js></script>
     </body>
     </html>
