Modifying the index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             </form>
         </div>
         <div id ='area'></div>
-        <script src=./ranrun.js></script>
+        <script src=./ranball.js></script>
     </body>
     </html>
