--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href='./styles.css'/>
+        <link rel="stylesheet" href='./css/styles.css'/>
         <title>RandomBallMove</title>
     </head>
     <body>
@@ -19,6 +19,6 @@
             </form>
         </div>
         <div id ='area'></div>
-        <script src=./ranball.js></script>
+        <script src="./ranball.js"></script>
     </body>
     </html>
