Added clear button and modified the styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <form>
                 <label for="ballcount">Number of Balls :</label>
                 <input type="text" id="ballcount" name="ballcount"><br><br>
-                <button type="button" id='button' onclick="start();"> Submit </button><br><br>
+                <button type="button" id='button' onclick="start();"> Submit </button>
+                <button type="button" id='button' onclick="clear();"> Clear </button><br><br><br><br>
             </form>
         </div>
         <div id ='area'></div>
