Added media files and fixed clear function and some css styles

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div id = 'input'>
             <form>
                 <label for="ballcount">Number of Balls :</label>
-                <input type="text" id="ballcount" name="ballcount"><br><br>
-                <button type="button" id='button' onclick="start();"> Submit </button>
-                <button type="button" id='button' onclick="clear();"> Clear </button><br><br><br><br>
+                <input type="text" id= "ballcount" name= "ballcount"><br><br>
+                <button type="button" id='button' onclick= "start();"> Submit </button>
+                <button type="button" class= 'clearbtn' id='button'> Clear </button><br><br><br><br>
             </form>
         </div>
         <div id ='area'></div>
